Fix table-based markup Fix wrong spacing on init sidebar button Remove coffeescript comments Single toggle for content buttons, which are reset if sidebar is collapsed index.html updated to work with sidebar api

--- a/app/styles/modules/mapToolbar/_mapToolbar.scss
+++ b/app/styles/modules/mapToolbar/_mapToolbar.scss
@@ -29,9 +29,8 @@ Map Toolbar
 			border-color: transparent;
 		}
 		&.show-toolbar {
-			@extend %inline;
 			&.active {
-				display: block;
+				display: inline;
 			}
 		}
 		&:hover{
@@ -47,6 +46,7 @@ Map Toolbar
 
 	.sidebar-content-container{
 		@extend %inline;
+		float: right;
 	}
 }
 
