--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -77,7 +77,7 @@ Positions
 /* =============================================================================
 Display modes
 ========================================================================== */
-.mapToolbar button.show-toolbar, .mapToolbar .sidebar-content-container {
+.mapToolbar .sidebar-content-container {
   display: inline-block; }
 
 /* =============================================================================
@@ -103,13 +103,15 @@ Map Toolbar
       border-width: 0 0.11em 0 0.11em;
       border-color: transparent; }
     .mapToolbar button.show-toolbar.active {
-      display: block; }
+      display: inline; }
     .mapToolbar button:hover {
       background: #c3c3c3;
       border-width: 0 0.11em 0 0.11em;
       border-color: transparent; }
   .mapToolbar .toolbar-buttons {
     float: left; }
+  .mapToolbar .sidebar-content-container {
+    float: right; }
 
 #map-canvas {
   height: 100%;
